# rogtk

./: .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  LOGGING_CHANGES_SUMMARY.txt  MANIFEST.in  Makefile  OPTIMIZATION_INSTRUCTIONS.md  PARALLELIZATION_SUMMARY.txt  PERFORMANCE_ROADMAP.md  README.md  pyproject.toml  run.py  setup.py  test.py
.github/workflows/: publish_to_pypi.yml
cdbg/: Cargo.toml
cdbg/src/: main.rs
dbg/: Cargo.toml  exa.fasta
dbg/src/: graph_viz.rs  main.rs
dmfq/: Cargo.toml
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  rogtk.rst
lscripts/: advanced_benchmark.py  advanced_optimization_benchmark.py  benchmark_htslib_parallel.py  bgzf_optimization_benchmark.py  hybrid_segments_benchmark.py  improved_bgzf_benchmark.py  intensive_benchmark.py  minimal_fix_test.py  parameter_optimization_suite.py  simple_benchmark.py  test_hybrid.py  test_hybrid_debug.py  test_hybrid_scale.py  test_more_segments.py  test_optimizations.py  verify_output_size.py
rogtk/: __init__.py  utils.py
src/: bam.rs  bam_htslib.rs  bam_htslib_hybrid.rs  bam_htslib_hybrid_minimal.rs  bam_htslib_hybrid_optimized.rs  djfind.rs  expressions.rs  fracture.rs  fracture_opt.rs  graph_viz.rs  lib.rs  main.rs  parallel_toy.rs  parallel_toy_ipc.rs  single_fastq.rs  umi_score.rs
tests/: test_rogtk.py
