[package]
name = "rogtk"
version = "0.1.10"
authors = [
  "Pedro Olivares Chauvet <pedro.olivares@mdc-berlin.de>", 
  "Pedro Olivares Chauvet <pedro.olivares@weizmann.ac.il>", 
]
edition = "2018"

[lib]
name = "_internal"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rogtk._internal"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

[dependencies]

#seal = "0.1.5"
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
flate2 = "1.0"
itertools = "0.12.0" 
parquet = "50.0.0"
arrow = "=50.0.0"
tokio = "1.35.1"
#polars = { version = "0.39.2", features = ["parquet", "lazy", "strings", "temporal", "random"] }
polars = "0.43.1"
polars-core = { version = "0.43.1", features = ["dtype-array"], default-features = false }
chrono = "=0.4.38"
pyo3-polars = { version = "0.17.0", features = ["derive", "dtype-struct", "dtype-decimal", "dtype-array"] }
serde = { version = "1", features = ["derive"] }
target-lexicon = "0.12.14"

#DBGraphs
bio = "2.0.3"
debruijn = "0.3.4"
log = "0.4"
env_logger = "0.9.3"
bit-set = "0.5"
boomphf = { version = "0.5", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.13.0"

num-traits = "0.2"
petgraph = "0.7.1"
#serde_derive = "1"
#serde_json = "1"
#smallvec = "1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
