##[build-system]
##requires = ["setuptools", "wheel", "setuptools-rust", "maturin>=1.0,<2.0", "polars>=0.20.6"]
##build-backend = "maturin"
[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.6"]
build-backend = "maturin"

[project]
name = "rogtk"
version = "0.1.1"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
[project.optional-dependencies]
test = [
    "pytest>=7.0",
]


[tool.maturin]
features = ["pyo3/extension-module"]
#rust-toolchain = "stable"
#args = ["--force"]
